# controlling-speed-of-robot-using-music

./: README.md  Sample_Working.mkv
articubot_one/: CMakeLists.txt  package.xml  setup.py
articubot_one/articubot_one/: audio_playback_node.py  audio_processing_node.py  robot_controller.py  robot_speed_subscriber.py
articubot_one/description/: gazebo_control.xacro
articubot_one/launch/: audio.launch.py  launch_sim.launch.py
articubot_one/msg/: RobotSpeed.msg
